--- a/flights.html
+++ b/flights.html
@@ -92,7 +92,7 @@
     </style>
 </head>
 
-<body class="bg-slate-50 font-body text-[#00143D] antialiased">
+<body class="bg-[#FFFAF0] font-body text-[#00143D] antialiased">
 
     <!-- Page Transition Curtain -->
     <div id="page-curtain"></div>
@@ -103,18 +103,19 @@
             class="max-w-7xl mx-auto w-full flex items-center justify-between px-10 py-5 rounded-[40px]">
             <a href="index.html" class="flex items-center gap-1 group page-link">
                 <span id="logo-span"
-                    class="text-3xl font-black tracking-tighter italic text-white group-hover:text-[#FF6B00] transition-colors">CK<span
-                        class="text-[#FF6B00] not-italic">.</span></span>
+                    class="text-3xl font-black tracking-tighter italic text-[#00BFFF] group-hover:text-[#FF8C00] transition-colors">CK<span
+                        class="text-[#FF8C00] not-italic">.</span></span>
             </a>
 
             <div class="hidden lg:flex items-center gap-12 font-bold text-[11px] tracking-[0.3em] uppercase">
                 <a href="index.html"
-                    class="nav-link-text text-white/60 hover:text-[#FF6B00] transition-colors page-link">Home</a>
-                <a href="flights.html" class="nav-link-text text-[#FF6B00]">Flights</a>
+                    class="nav-link-text text-[#00BFFF]/60 hover:text-[#FF8C00] transition-colors page-link">Home</a>
+                <a href="flights.html" class="nav-link-text text-[#FF8C00]">Flights</a>
                 <a href="packages.html"
-                    class="nav-link-text text-white/60 hover:text-[#FF6B00] transition-colors page-link">Packages</a>
+                    class="nav-link-text text-[#00BFFF]/60 hover:text-[#FF8C00] transition-colors page-link">Packages</a>
                 <a href="booking.html"
-                    class="nav-link-text text-white/60 hover:text-[#FF6B00] transition-colors page-link">My Trips</a>
+                    class="nav-link-text text-[#00BFFF]/60 hover:text-[#FF8C00] transition-colors page-link">My
+                    Trips</a>
             </div>
 
             <div class="flex items-center gap-6">
@@ -127,31 +128,31 @@
     </nav>
 
     <!-- Asset Header -->
-    <header class="pt-48 pb-12 bg-[#00143D]">
+    <header class="pt-48 pb-12 bg-[#FFFAF0]">
         <div class="max-w-7xl mx-auto px-6">
             <div
-                class="glass-2 p-12 rounded-[64px] flex flex-col lg:flex-row items-center justify-between gap-12 reveal-up">
+                class="bg-white/40 backdrop-blur-xl border border-[#00BFFF]/10 p-12 rounded-[64px] flex flex-col lg:flex-row items-center justify-between gap-12 reveal-up shadow-[0_20px_50px_rgba(0,191,255,0.05)]">
                 <div class="flex items-center gap-16">
                     <div class="space-y-4">
-                        <p class="text-[10px] font-black tracking-[0.5em] text-[#FF6B00] uppercase">Mission Region</p>
-                        <div class="text-6xl font-heading font-black italic text-white flex items-center gap-6">
-                            DXB <span class="not-italic text-sm text-slate-500">→</span> LHR
+                        <p class="text-[10px] font-black tracking-[0.5em] text-[#FF8C00] uppercase">Selected Vector</p>
+                        <div class="text-6xl font-heading font-black italic text-[#00143D] flex items-center gap-6">
+                            DXB <span class="not-italic text-sm text-[#00BFFF]">→</span> LHR
                         </div>
                     </div>
-                    <div class="w-px h-20 bg-white/10 hidden md:block"></div>
+                    <div class="w-px h-20 bg-[#00BFFF]/10 hidden md:block"></div>
                     <div class="space-y-4">
-                        <p class="text-[10px] font-black tracking-[0.5em] text-slate-500 uppercase">Synchronized Window
+                        <p class="text-[10px] font-black tracking-[0.5em] text-[#00143D]/30 uppercase">Departure Window
                         </p>
-                        <div class="text-3xl font-black italic text-white">24 OCT, 2026</div>
+                        <div class="text-3xl font-black italic text-[#00143D]">24 OCT, 2026</div>
                     </div>
                 </div>
 
-                <div class="bg-white/5 p-2 rounded-full flex gap-2">
+                <div class="bg-[#00143D]/5 p-2 rounded-full flex gap-2">
                     <button
-                        class="px-10 py-5 bg-[#FF6B00] text-white rounded-full text-[10px] font-black tracking-widest uppercase shadow-xl">Most
+                        class="px-10 py-5 bg-[#FF8C00] text-white rounded-full text-[10px] font-black tracking-widest uppercase shadow-xl">Most
                         Economical</button>
                     <button
-                        class="px-10 py-5 hover:bg-white/5 text-slate-400 hover:text-white rounded-full text-[10px] font-black tracking-widest uppercase transition-all">Rapid
+                        class="px-10 py-5 hover:bg-[#00143D]/5 text-[#00143D]/40 hover:text-[#00143D] rounded-full text-[10px] font-black tracking-widest uppercase transition-all">Rapid
                         Transit</button>
                 </div>
             </div>
