--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/MotionPathPlugin.min.js"></script>
+    <!-- Three.js 3D Engine -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.33/dist/lenis.min.js"></script>
 
     <!-- Design System -->
@@ -101,43 +103,29 @@
 
         /* Scrollbar */
         ::-webkit-scrollbar {
-            width: 6px;
+            width: 8px;
         }
 
         ::-webkit-scrollbar-track {
-            background: #00143D;
+            background: #FFFAF0;
         }
 
         ::-webkit-scrollbar-thumb {
-            background: #FF6B00;
+            background: #FF8C00;
             border-radius: 10px;
+            border: 2px solid #FFFAF0;
         }
 
         /* Mobile Nav */
         .mobile-tab-bar {
-            background: rgba(0, 20, 61, 0.95);
+            background: rgba(255, 250, 240, 0.95);
             backdrop-filter: blur(20px);
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        @media (max-width: 1024px) {
-            .bento-grid {
-                grid-template-columns: 1fr;
-                grid-template-rows: auto;
-            }
-
-            .bento-item-large,
-            .bento-item-tall,
-            .bento-item-wide {
-                grid-column: span 1;
-                grid-row: span 1;
-                min-height: 300px;
-            }
+            border-top: 1px solid rgba(0, 191, 255, 0.1);
         }
     </style>
 </head>
 
-<body class="bg-white font-body text-[#00143D] antialiased overflow-x-hidden">
+<body class="bg-[#FFFAF0] font-body text-[#00143D] antialiased overflow-x-hidden">
 
     <!-- Page Transition Curtain -->
     <div id="page-curtain"></div>
@@ -150,18 +138,18 @@
             class="max-w-7xl mx-auto w-full flex items-center justify-between px-10 py-5 rounded-[40px]">
             <a href="index.html" class="flex items-center gap-1 group page-link">
                 <span id="logo-span"
-                    class="text-3xl font-black tracking-tighter italic text-white group-hover:text-[#FF6B00] transition-colors">CK<span
-                        class="text-[#FF6B00] not-italic">.</span></span>
+                    class="text-3xl font-black tracking-tighter italic text-[#00BFFF] group-hover:text-[#FF8C00] transition-colors">CK<span
+                        class="text-[#FF8C00] not-italic">.</span></span>
             </a>
 
             <div class="hidden lg:flex items-center gap-12 font-bold text-[11px] tracking-[0.3em] uppercase">
-                <a href="index.html" class="nav-link-text text-[#FF6B00] page-link">Home</a>
+                <a href="index.html" class="nav-link-text text-[#FF8C00] page-link">Home</a>
                 <a href="flights.html"
-                    class="nav-link-text text-white hover:text-[#FF6B00] transition-colors page-link">Flights</a>
+                    class="nav-link-text text-[#00BFFF] hover:text-[#FF8C00] transition-colors page-link">Flights</a>
                 <a href="packages.html"
-                    class="nav-link-text text-white hover:text-[#FF6B00] transition-colors page-link">Packages</a>
+                    class="nav-link-text text-[#00BFFF] hover:text-[#FF8C00] transition-colors page-link">Packages</a>
                 <a href="booking.html"
-                    class="nav-link-text text-white hover:text-[#FF6B00] transition-colors page-link">My Trips</a>
+                    class="nav-link-text text-[#00BFFF] hover:text-[#FF8C00] transition-colors page-link">My Trips</a>
             </div>
 
             <div class="flex items-center gap-6">
@@ -173,59 +161,26 @@
         </div>
     </nav>
 
-    <!-- Mobile Tab Bar -->
-    <div class="lg:hidden fixed bottom-0 w-full z-50 px-6 pb-8 pt-4 mobile-tab-bar text-white">
-        <div class="flex justify-around items-center">
-            <a href="index.html" class="flex flex-col items-center gap-1 text-[#FF6B00] page-link">
-                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                    <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" />
-                </svg>
-                <span class="text-[8px] font-black uppercase tracking-widest">Home</span>
-            </a>
-            <a href="flights.html" class="flex flex-col items-center gap-1 opacity-40 page-link">
-                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                    <path
-                        d="M21 16v-2l-8-5V3.5c0-.83-.67-1.5-1.5-1.5S10 2.67 10 3.5V9l-8 5v2l8-2.5V19l-2 1.5V22l3.5-1 3.5 1v-1.5L13 19v-5.5l8 2.5z" />
-                </svg>
-                <span class="text-[8px] font-black uppercase tracking-widest">Flights</span>
-            </a>
-            <a href="packages.html" class="flex flex-col items-center gap-1 opacity-40 page-link">
-                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                    <path d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
-                    <path d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
-                </svg>
-                <span class="text-[8px] font-black uppercase tracking-widest">Packages</span>
-            </a>
-            <a href="booking.html" class="flex flex-col items-center gap-1 opacity-40 page-link">
-                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                    <path
-                        d="M19 3h-1V1h-2v2H8V1H6v3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11z" />
-                </svg>
-                <span class="text-[8px] font-black uppercase tracking-widest">Trips</span>
-            </a>
-        </div>
-    </div>
-
     <!-- Hero Section -->
-    <section class="relative h-screen flex items-center justify-center overflow-hidden bg-midnight">
-        <div class="absolute inset-0 z-10 bg-gradient-to-b from-[#00143D] via-transparent to-[#00143D] opacity-60">
-        </div>
-        <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover brightness-[0.5]">
-            <source src="https://cdn.pixabay.com/video/2023/11/04/187747-880922659_large.mp4" type="video/mp4">
-        </video>
+    <section class="relative h-screen flex items-center justify-center overflow-hidden bg-[#FFFAF0]">
+
+        <div class="absolute inset-0 z-10 bg-gradient-to-b from-[#FFFAF0]/0 via-[#FFFAF0]/50 to-[#FFFAF0]"></div>
 
         <div class="relative z-20 max-w-6xl w-full px-6 text-center space-y-12">
             <h1 id="hero-title"
-                class="text-7xl md:text-[140px] font-heading font-black leading-[0.85] text-white italic">
-                The World is <br> <span class="not-italic text-white">Waiting.</span>
+                class="text-7xl md:text-[140px] font-heading font-black leading-[0.85] text-[#00143D] italic">
+                The World is <br> <span class="not-italic text-[#00BFFF]">Waiting.</span>
             </h1>
 
             <!-- Search Container -->
-            <div class="max-w-4xl mx-auto glass-2 p-10 rounded-[48px] reveal-up">
+            <div class="max-w-4xl mx-auto glass-2 p-10 rounded-[48px] reveal-up relative overflow-hidden">
+                <!-- AI Shimmer Line -->
+                <div id="ai-shimmer" class="absolute top-0 left-[-100%] w-[50%] h-[2px] bg-[#00BFFF] blur-[4px]"></div>
+
                 <div
-                    class="flex flex-col md:flex-row items-center bg-white rounded-[32px] p-2 shadow-2xl focus-within:ring-4 ring-orange-500/20 transition-all">
+                    class="flex flex-col md:flex-row items-center bg-white/80 backdrop-blur-md rounded-[32px] p-2 shadow-2xl focus-within:ring-4 ring-[#00BFFF]/20 transition-all border border-[#00BFFF]/10">
                     <div class="flex-1 flex items-center px-6 gap-4">
-                        <div class="text-[#FF6B00]">
+                        <div class="text-[#FF8C00]">
                             <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
                                 <path
                                     d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
@@ -244,21 +199,22 @@
 
                 <div class="mt-10 flex items-center justify-center gap-8 reveal-up">
                     <div class="flex items-center gap-3">
-                        <div class="w-2.5 h-2.5 bg-[#FF6B00] rounded-full animate-ping"></div>
-                        <span class="text-[10px] font-black tracking-[0.2em] text-white/60">LIVE RADAR ACTIVE</span>
+                        <div class="w-2.5 h-2.5 bg-[#FF8C00] rounded-full animate-ping"></div>
+                        <span class="text-[10px] font-black tracking-[0.2em] text-[#00143D]/60">LIVE RADAR
+                            ACTIVE</span>
                     </div>
-                    <div class="w-px h-6 bg-white/20"></div>
+                    <div class="w-px h-6 bg-[#00143D]/10"></div>
                     <div class="flex items-center gap-3">
-                        <p class="text-[10px] font-black tracking-[0.2em] text-white/80"><span
-                                class="text-[#FF6B00]">2,401</span> NODES CONNECTED</p>
+                        <p class="text-[10px] font-black tracking-[0.2em] text-[#00143D]/80"><span
+                                class="text-[#FF8C00]">2,401</span> NODES CONNECTED</p>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="absolute bottom-10 left-1/2 -translate-x-1/2 flex flex-col items-center gap-4 opacity-40">
-            <span class="text-[9px] font-black tracking-[0.5em] text-white uppercase">Dive In</span>
-            <div class="w-[1px] h-16 bg-gradient-to-b from-[#FF6B00] to-transparent"></div>
+            <span class="text-[9px] font-black tracking-[0.5em] text-[#00143D] uppercase">Dive In</span>
+            <div class="w-[1px] h-16 bg-gradient-to-b from-[#FF8C00] to-transparent"></div>
         </div>
     </section>
 
@@ -306,7 +262,8 @@
         <div class="max-w-7xl mx-auto px-6">
             <div class="flex justify-between items-end mb-24 reveal-up">
                 <div class="space-y-4">
-                    <p class="text-[11px] font-black tracking-[0.5em] text-[#FF6B00] uppercase">Premium Inventory</p>
+                    <p class="text-[11px] font-black tracking-[0.5em] text-[#FF6B00] uppercase">Premium
+                        Inventory</p>
                     <h2 class="text-7xl font-heading font-black italic text-[#00143D]">Bento <span
                             class="not-italic text-[#00143D]/20">Selected.</span></h2>
                 </div>
@@ -319,7 +276,8 @@
 
             <div class="bento-grid" id="packages-bento">
                 <div class="bento-item-large bg-white rounded-[48px] overflow-hidden group relative reveal-up">
-                    <div class="absolute inset-0 bg-gradient-to-t from-[#00143D]/80 to-transparent z-10"></div>
+                    <div class="absolute inset-0 bg-gradient-to-t from-[#00143D]/80 to-transparent z-10">
+                    </div>
                     <img src="https://images.unsplash.com/photo-1544620347-c4fd4a3d5957?q=80&w=2069&auto=format&fit=crop"
                         class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-[2s]"
                         alt="Dubai Package">
@@ -327,28 +285,34 @@
                         <span
                             class="bg-[#FF6B00] text-white px-5 py-2 rounded-full text-[10px] font-black tracking-widest uppercase">Featured
                             Deployment</span>
-                        <h3 class="text-5xl font-heading font-black italic text-white">The Dubai <br> Nautical Elite.
+                        <h3 class="text-5xl font-heading font-black italic text-white">The Dubai <br>
+                            Nautical Elite.
                         </h3>
                     </div>
                 </div>
                 <div class="bento-item-tall bg-white rounded-[48px] overflow-hidden group relative reveal-up">
-                    <div class="absolute inset-0 bg-gradient-to-t from-[#00143D]/80 to-transparent z-10"></div>
+                    <div class="absolute inset-0 bg-gradient-to-t from-[#00143D]/80 to-transparent z-10">
+                    </div>
                     <img src="https://images.unsplash.com/photo-1514282401047-d79a71a590e8?q=80&w=1965&auto=format&fit=crop"
                         class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-[2s]"
                         alt="Maldives Package">
                     <div class="absolute bottom-10 left-10 z-20">
-                        <h3 class="text-3xl font-heading font-black italic text-white">Maldives <br> Overwater
+                        <h3 class="text-3xl font-heading font-black italic text-white">Maldives <br>
+                            Overwater
                             Interface.</h3>
                     </div>
                 </div>
                 <div class="bento-item-wide bg-[#00143D] rounded-[48px] p-12 reveal-up relative overflow-hidden group">
                     <div class="relative z-10 flex flex-col justify-between h-full">
-                        <div class="text-[10px] font-black tracking-[0.4em] text-[#FF6B00] uppercase">Live Metrics</div>
-                        <div class="text-4xl font-heading font-black italic text-white">"Luxury isn't a place, <br> it's
+                        <div class="text-[10px] font-black tracking-[0.4em] text-[#FF6B00] uppercase">Live
+                            Metrics</div>
+                        <div class="text-4xl font-heading font-black italic text-white">"Luxury isn't a
+                            place, <br> it's
                             a synchronized path."</div>
                         <div class="flex items-center gap-4">
                             <div class="w-12 h-px bg-white/20"></div>
-                            <span class="text-[9px] font-black tracking-[0.3em] text-white/40 uppercase">Global Dispatch
+                            <span class="text-[9px] font-black tracking-[0.3em] text-white/40 uppercase">Global
+                                Dispatch
                                 Center</span>
                         </div>
                     </div>
@@ -357,11 +321,13 @@
                     </div>
                 </div>
                 <div class="bg-white rounded-[48px] overflow-hidden group relative reveal-up">
-                    <div class="absolute inset-0 bg-gradient-to-t from-[#00143D]/80 to-transparent z-10"></div>
+                    <div class="absolute inset-0 bg-gradient-to-t from-[#00143D]/80 to-transparent z-10">
+                    </div>
                     <img src="https://images.unsplash.com/photo-1493976040374-85c8e12f0c0e?q=80&w=2070&auto=format&fit=crop"
                         class="w-full h-full object-cover" alt="Santorini Package">
                     <div class="absolute bottom-6 left-6 z-20">
-                        <h3 class="text-xl font-heading font-black italic text-white uppercase">Santorini Node.</h3>
+                        <h3 class="text-xl font-heading font-black italic text-white uppercase">Santorini
+                            Node.</h3>
                     </div>
                 </div>
             </div>
@@ -375,24 +341,29 @@
                 <div class="max-w-md">
                     <span class="text-5xl font-black tracking-tighter italic text-white mb-10 inline-block">CK<span
                             class="text-[#FF6B00] not-italic">.</span></span>
-                    <p class="text-slate-500 text-lg leading-relaxed font-medium">Revisiting the golden age of travel
+                    <p class="text-slate-500 text-lg leading-relaxed font-medium">Revisiting the golden age
+                        of travel
                         with modern nautical precision. Secure your passage into the new world.</p>
                 </div>
                 <div class="grid grid-cols-2 lg:grid-cols-3 gap-24">
                     <div class="space-y-8">
-                        <h4 class="text-[10px] font-black tracking-[0.5em] uppercase text-[#FF6B00]">The Map</h4>
+                        <h4 class="text-[10px] font-black tracking-[0.5em] uppercase text-[#FF6B00]">The Map
+                        </h4>
                         <div class="flex flex-col gap-5 text-sm font-bold text-slate-400">
                             <a href="flights.html" class="hover:text-white transition-colors page-link">Flights</a>
                             <a href="packages.html" class="hover:text-white transition-colors page-link">Packages</a>
-                            <a href="booking.html" class="hover:text-white transition-colors page-link">My Trips</a>
+                            <a href="booking.html" class="hover:text-white transition-colors page-link">My
+                                Trips</a>
                         </div>
                     </div>
                     <div class="space-y-8">
-                        <h4 class="text-[10px] font-black tracking-[0.5em] uppercase text-[#FF6B00]">The Bridge</h4>
+                        <h4 class="text-[10px] font-black tracking-[0.5em] uppercase text-[#FF6B00]">The
+                            Bridge</h4>
                         <div class="flex flex-col gap-5 text-sm font-bold text-slate-400">
                             <a href="admin-login.html" class="hover:text-white transition-colors page-link">Officer
                                 Login</a>
-                            <a href="login.html" class="hover:text-white transition-colors page-link">Member Link</a>
+                            <a href="login.html" class="hover:text-white transition-colors page-link">Member
+                                Link</a>
                         </div>
                     </div>
                 </div>
